--- a/pom.xml
+++ b/pom.xml
@@ -6,29 +6,32 @@
 
     <groupId>io.github.thatsmusic99</groupId>
     <artifactId>ATHENA</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.3.0-SNAPSHOT</version>
+                <version>3.5.0</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <relocations>
                         <relocation>
                             <pattern>org.bstats</pattern>
-                            <!-- Replace this with your package! -->
-                            <shadedPattern>io.github.thatsmusic99.athena.bstats</shadedPattern>
+                            <shadedPattern>io.github.thatsmusic99.athena.libs.org.bstats</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>me.nahu</pattern>
+                            <shadedPattern>io.github.thatsmusic99.athena.libs.me.nahu</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -53,6 +56,10 @@
         <repository>
             <id>papermc</id>
             <url>https://papermc.io/repo/repository/maven-public/</url>
+        </repository>
+        <repository>
+            <id>lemongaming-repo</id>
+            <url>https://repo.lemongaming.ltd/repository/maven-public/</url>
         </repository>
     </repositories>
 
@@ -82,6 +89,12 @@
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
             <version>2.2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>me.nahu.wrapper</groupId>
+            <artifactId>folia-scheduler-wrapper</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
